--- a/static/index.html
+++ b/static/index.html
@@ -17,6 +17,7 @@
     <button id="leaveBtn" disabled>Leave</button>
   </div>
   <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
+  <script src="https://unpkg.com/simple-peer@9.11.1/simplepeer.min.js"></script>
   <script src="js/app.js"></script>
 </body>
 </html>
