--- a/static/index.html
+++ b/static/index.html
@@ -5,17 +5,275 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Black Ops Voice Chat</title>
   <style>
-    body { background: #000; color: #0f0; font-family: monospace; }
-    #controls { margin: 1rem; }
-    button { padding: 0.5rem; margin-right: 0.5rem; }
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      background: linear-gradient(135deg, #0a0a0a 0%, #1a1a2e 50%, #16213e 100%);
+      color: #ffffff;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      height: 100vh;
+      overflow: hidden;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 3rem;
+      z-index: 10;
+    }
+
+    .controls {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 1.5rem;
+    }
+
+    .input-group {
+      display: flex;
+      gap: 1rem;
+      align-items: center;
+    }
+
+    #roomInput {
+      padding: 0.75rem 1.5rem;
+      border: 2px solid rgba(59, 130, 246, 0.3);
+      border-radius: 50px;
+      background: rgba(15, 23, 42, 0.8);
+      color: white;
+      font-size: 1rem;
+      outline: none;
+      transition: all 0.3s ease;
+      backdrop-filter: blur(10px);
+      min-width: 200px;
+    }
+
+    #roomInput:focus {
+      border-color: rgba(59, 130, 246, 0.8);
+      box-shadow: 0 0 20px rgba(59, 130, 246, 0.3);
+    }
+
+    #roomInput::placeholder {
+      color: rgba(255, 255, 255, 0.5);
+    }
+
+    .button-group {
+      display: flex;
+      gap: 1rem;
+    }
+
+    button {
+      padding: 0.75rem 2rem;
+      border: none;
+      border-radius: 50px;
+      font-size: 1rem;
+      font-weight: 600;
+      cursor: pointer;
+      transition: all 0.3s ease;
+      backdrop-filter: blur(10px);
+      position: relative;
+      overflow: hidden;
+    }
+
+    #joinBtn {
+      background: linear-gradient(135deg, #3b82f6, #1d4ed8);
+      color: white;
+      box-shadow: 0 4px 15px rgba(59, 130, 246, 0.4);
+    }
+
+    #joinBtn:hover:not(:disabled) {
+      transform: translateY(-2px);
+      box-shadow: 0 8px 25px rgba(59, 130, 246, 0.6);
+    }
+
+    #joinBtn:disabled {
+      background: rgba(75, 85, 99, 0.5);
+      cursor: not-allowed;
+      box-shadow: none;
+    }
+
+    #leaveBtn {
+      background: linear-gradient(135deg, #ef4444, #dc2626);
+      color: white;
+      box-shadow: 0 4px 15px rgba(239, 68, 68, 0.4);
+    }
+
+    #leaveBtn:hover:not(:disabled) {
+      transform: translateY(-2px);
+      box-shadow: 0 8px 25px rgba(239, 68, 68, 0.6);
+    }
+
+    #leaveBtn:disabled {
+      background: rgba(75, 85, 99, 0.5);
+      cursor: not-allowed;
+      box-shadow: none;
+    }
+
+    .audio-visualizer {
+      width: 300px;
+      height: 300px;
+      border-radius: 50%;
+      background: radial-gradient(circle, rgba(59, 130, 246, 0.1) 0%, rgba(59, 130, 246, 0.05) 70%, transparent 100%);
+      border: 2px solid rgba(59, 130, 246, 0.3);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      position: relative;
+      box-shadow: 
+        0 0 50px rgba(59, 130, 246, 0.2),
+        inset 0 0 50px rgba(59, 130, 246, 0.1);
+      animation: pulse 2s ease-in-out infinite alternate;
+    }
+
+    @keyframes pulse {
+      0% {
+        box-shadow: 
+          0 0 50px rgba(59, 130, 246, 0.2),
+          inset 0 0 50px rgba(59, 130, 246, 0.1);
+      }
+      100% {
+        box-shadow: 
+          0 0 80px rgba(59, 130, 246, 0.4),
+          inset 0 0 80px rgba(59, 130, 246, 0.2);
+      }
+    }
+
+    .wave-container {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 4px;
+      height: 100px;
+    }
+
+    .wave-bar {
+      width: 4px;
+      background: linear-gradient(to top, #3b82f6, #60a5fa);
+      border-radius: 2px;
+      animation: wave 1s ease-in-out infinite;
+      opacity: 0.3;
+    }
+
+    .wave-bar.active {
+      opacity: 1;
+      box-shadow: 0 0 10px rgba(59, 130, 246, 0.8);
+    }
+
+    .wave-bar:nth-child(1) { height: 20px; animation-delay: 0.1s; }
+    .wave-bar:nth-child(2) { height: 35px; animation-delay: 0.2s; }
+    .wave-bar:nth-child(3) { height: 50px; animation-delay: 0.3s; }
+    .wave-bar:nth-child(4) { height: 45px; animation-delay: 0.4s; }
+    .wave-bar:nth-child(5) { height: 60px; animation-delay: 0.5s; }
+    .wave-bar:nth-child(6) { height: 35px; animation-delay: 0.6s; }
+    .wave-bar:nth-child(7) { height: 50px; animation-delay: 0.7s; }
+    .wave-bar:nth-child(8) { height: 40px; animation-delay: 0.8s; }
+    .wave-bar:nth-child(9) { height: 25px; animation-delay: 0.9s; }
+
+    @keyframes wave {
+      0%, 100% {
+        transform: scaleY(1);
+      }
+      50% {
+        transform: scaleY(1.5);
+      }
+    }
+
+    .status-indicator {
+      position: absolute;
+      top: -10px;
+      right: -10px;
+      width: 20px;
+      height: 20px;
+      border-radius: 50%;
+      background: #10b981;
+      box-shadow: 0 0 10px #10b981;
+      display: none;
+    }
+
+    .status-indicator.connected {
+      display: block;
+      animation: blink 2s ease-in-out infinite;
+    }
+
+    @keyframes blink {
+      0%, 100% { opacity: 1; }
+      50% { opacity: 0.3; }
+    }
+
+    .background-effect {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      pointer-events: none;
+      opacity: 0.1;
+      z-index: 1;
+    }
+
+    .particle {
+      position: absolute;
+      width: 2px;
+      height: 2px;
+      background: #3b82f6;
+      border-radius: 50%;
+      animation: float 6s ease-in-out infinite;
+    }
+
+    @keyframes float {
+      0%, 100% {
+        transform: translateY(0px) rotate(0deg);
+        opacity: 0;
+      }
+      50% {
+        opacity: 1;
+      }
+      100% {
+        transform: translateY(-100vh) rotate(360deg);
+        opacity: 0;
+      }
+    }
   </style>
 </head>
 <body>
-  <div id="controls">
-    <input id="roomInput" placeholder="Room ID" />
-    <button id="joinBtn">Join</button>
-    <button id="leaveBtn" disabled>Leave</button>
+  <div class="background-effect" id="backgroundEffect"></div>
+  
+  <div class="container">
+    <div class="controls">
+      <div class="input-group">
+        <input id="roomInput" placeholder="Enter Party Room ID" />
+      </div>
+      <div class="button-group">
+        <button id="joinBtn">Join Party</button>
+        <button id="leaveBtn" disabled>Leave Party</button>
+      </div>
+    </div>
+
+    <div class="audio-visualizer">
+      <div class="wave-container">
+        <div class="wave-bar"></div>
+        <div class="wave-bar"></div>
+        <div class="wave-bar"></div>
+        <div class="wave-bar"></div>
+        <div class="wave-bar"></div>
+        <div class="wave-bar"></div>
+        <div class="wave-bar"></div>
+        <div class="wave-bar"></div>
+        <div class="wave-bar"></div>
+      </div>
+      <div class="status-indicator" id="statusIndicator"></div>
+    </div>
   </div>
+
   <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
   <script src="https://unpkg.com/simple-peer@9.11.1/simplepeer.min.js"></script>
   <script src="js/app.js"></script>
