--- a/static/index.html
+++ b/static/index.html
@@ -212,15 +212,21 @@
 
     .screen-share {
       position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: min(80vw, 70vh);
+      height: min(60vh, 45vw);
+      max-width: 800px;
+      max-height: 450px;
       object-fit: contain;
-      background: #000;
-      z-index: 5;
+      background: rgba(0, 0, 0, 0.9);
+      border: 2px solid rgba(59, 130, 246, 0.6);
+      border-radius: 12px;
+      box-shadow: 0 20px 40px rgba(0, 0, 0, 0.7);
+      z-index: 8;
       opacity: 0;
-      transition: opacity 0.5s ease;
+      transition: all 0.5s ease;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -333,6 +339,13 @@
         gap: 2px;
       }
 
+      .screen-share {
+        width: 90vw;
+        height: 50vh;
+        max-width: 90vw;
+        max-height: 50vh;
+      }
+
       @keyframes wave {
         0% { height: 10px; }
         100% { height: 25px; }
@@ -354,6 +367,11 @@
         width: min(100px, 25vw);
         height: min(75px, 19vw);
         bottom: 3.5rem;
+      }
+
+      .screen-share {
+        width: 95vw;
+        height: 45vh;
       }
     }
 
@@ -377,6 +395,13 @@
         bottom: 2.5rem;
         width: min(100px, 20vw);
         height: min(75px, 15vw);
+      }
+
+      .screen-share {
+        width: 70vw;
+        height: 70vh;
+        max-width: 600px;
+        max-height: 350px;
       }
     }
   </style>
