--- a/static/index.html
+++ b/static/index.html
@@ -293,6 +293,8 @@
         width: 100%;
         max-width: 250px;
         margin-bottom: 0.3rem;
+        font-size: 0.85rem;
+        padding: 0.5rem 0.8rem;
       }
 
       .room-buttons {
@@ -303,8 +305,8 @@
       }
 
       .central-circle {
-        width: min(250px, 60vw);
-        height: min(250px, 60vw);
+        width: min(200px, 50vw);
+        height: min(200px, 50vw);
         margin: 1rem 0;
       }
 
@@ -314,17 +316,17 @@
       }
 
       .pill-button {
-        padding: 0.5rem 0.8rem;
-        font-size: 0.8rem;
+        padding: 0.45rem 0.7rem;
+        font-size: 0.75rem;
         flex: 1;
         min-width: 0;
       }
 
       .local-video {
-        bottom: 4rem;
+        bottom: 3.5rem;
         right: 0.5rem;
-        width: min(120px, 30vw);
-        height: min(90px, 23vw);
+        width: min(100px, 25vw);
+        height: min(75px, 19vw);
       }
 
       .status-indicator {
@@ -340,38 +342,45 @@
       }
 
       .screen-share {
-        width: 90vw;
-        height: 50vh;
-        max-width: 90vw;
-        max-height: 50vh;
+        width: 95vw;
+        height: 60vh;
+        max-width: 95vw;
+        max-height: 60vh;
+        border-radius: 8px;
       }
 
       @keyframes wave {
-        0% { height: 10px; }
-        100% { height: 25px; }
+        0% { height: 8px; }
+        100% { height: 20px; }
       }
     }
 
     @media (max-width: 480px) {
       .central-circle {
-        width: min(200px, 55vw);
-        height: min(200px, 55vw);
+        width: min(160px, 45vw);
+        height: min(160px, 45vw);
       }
 
       .pill-button {
         padding: 0.4rem 0.6rem;
-        font-size: 0.75rem;
+        font-size: 0.7rem;
       }
 
       .local-video {
-        width: min(100px, 25vw);
-        height: min(75px, 19vw);
-        bottom: 3.5rem;
+        width: min(80px, 22vw);
+        height: min(60px, 17vw);
+        bottom: 3rem;
       }
 
       .screen-share {
-        width: 95vw;
-        height: 45vh;
+        width: 98vw;
+        height: 55vh;
+        border-radius: 6px;
+      }
+
+      .room-input {
+        font-size: 0.8rem;
+        padding: 0.45rem 0.7rem;
       }
     }
 
@@ -382,8 +391,8 @@
       }
 
       .central-circle {
-        width: min(150px, 25vh);
-        height: min(150px, 25vh);
+        width: min(120px, 20vh);
+        height: min(120px, 20vh);
         margin: 0.5rem 0;
       }
 
@@ -392,16 +401,26 @@
       }
 
       .local-video {
-        bottom: 2.5rem;
-        width: min(100px, 20vw);
-        height: min(75px, 15vw);
+        bottom: 2.2rem;
+        width: min(80px, 18vw);
+        height: min(60px, 13vw);
       }
 
       .screen-share {
-        width: 70vw;
-        height: 70vh;
+        width: 85vw;
+        height: 75vh;
         max-width: 600px;
-        max-height: 350px;
+      }
+    }
+
+    /* Performance optimizations */
+    .remote-video, .local-video, .screen-share {
+      will-change: transform, opacity;
+    }
+
+    @media (max-width: 768px) {
+      .bg-particle {
+        display: none; /* Remove particles on mobile for better performance */
       }
     }
   </style>
@@ -437,8 +456,8 @@
       <button class="pill-button" id="shareScreenBtn" disabled>🖥️ Share</button>
     </div>
 
-    <video class="remote-video" id="remoteVideo" autoplay playsinline></video>
-    <video class="screen-share" id="screenShare" autoplay playsinline></video>
+    <video class="remote-video" id="remoteVideo" autoplay playsinline muted></video>
+    <video class="screen-share" id="screenShare" autoplay playsinline muted></video>
     <video class="local-video" id="localVideo" autoplay muted playsinline></video>
   </div>
 
