--- a/static/index.html
+++ b/static/index.html
@@ -461,7 +461,7 @@
       <button class="pill-button" id="shareScreenBtn" disabled>🖥️ Share</button>
     </div>
 
-    <video class="remote-video" id="remoteVideo" autoplay playsinline muted></video>
+    <video class="remote-video" id="remoteVideo" autoplay playsinline></video>
     <video class="screen-share" id="screenShare" autoplay playsinline muted></video>
     <video class="local-video" id="localVideo" autoplay muted playsinline></video>
   </div>
